--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/manrope": "^5.0.17",
+		"open-props": "^1.6.12"
+	}
 }
